# phantom-detect

./: .gitignore  BOUNTY_EXECUTION_PLAN.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: sample_data.jsonl
experiments/: README.md  channel_directives.py  cross_topic_test.py  decoder.py  encoder.py  multi_channel_decoder.py  multi_channel_live_test.py  run_canary_test.py  run_detection_analysis.py  run_experiment.py  run_fingerprint_analysis.py  run_live_experiment.py  run_multi_channel_detection.py  run_multi_channel_fingerprint.py
experiments/adversarial/: adaptive_adversary.py  noise_injection_test.py  paraphrase_test.py  reduced_channel_test.py
experiments/bounty_poc/: BUGCROWD_SUBMISSION.md  README.md  README_BOUNTY.md  bidirectional_channel_test.py  claude_code_file_injection.py  claude_code_live_test.py  combined_decoder.py  combined_encoder.py  cross_platform_relay.py  custom_gpt_action_demo.py  custom_gpt_attack_scenario.md  data_aware_decoder.py  data_aware_encoder.py  data_aware_test.py  decoder.py  decoder_web.html  encoder.py  exfil_server.py  gpt_action_schema.json  indirect_injection_demo.py  injection_data_aware.txt  injection_multi.txt  injection_payload.txt  injection_v2.txt  langchain_demo.py  llamaindex_demo.py  malicious_claude_md.py  malicious_mcp_server.py  mcp_cross_tool_demo.py  mcp_live_server.py  mcp_live_test.py  memory_persistence_demo.py  multi_channel_exfiltration_report.md  multi_channel_test.py  multi_message_test.py  (+9 more)
papers/: 0din_abstract_email.md  blackhat_whitepaper.txt  openai_grant_proposal.txt
tests/: test_ccds.py  test_cli.py
(+162 files in other folders)
